--- a/fe-file/index.html
+++ b/fe-file/index.html
@@ -12,14 +12,13 @@
         }
     </style>
     <script>
-        var num = 0;
-        function show(str) {
-            document.querySelector('#show').innerHTML = `Flutter 传来的值: ${str}`;
-            OCObj.call('jsCallback', ['I callback from JS']);
+        function flutterCallJs(params, callback) {
+            document.querySelector('#show').innerHTML = `Flutter 传来的值: ${params.toString()}`;
+            callback(['I callback from JS']);
         }
         function jsCallFlutter() {
-            OCObj.call('jsCallFlutter', [`I from js: ${Math.random() * 10}`], function (sum) {
-                document.querySelector('#result').innerText = `flutter 回调的结果: ${num + sum}`;
+            jsCallFlutter([`I from js: ${Math.random() * 10}`], function (params) {
+                document.querySelector('#result').innerText = `flutter 回调的结果: ${params.toString()}`;
             });
         }
     </script>
