--- a/fe-file/index.html
+++ b/fe-file/index.html
@@ -19,6 +19,7 @@
             jsCallFlutter([`js: ${Math.random() * 10}`, 'from JS'], function (params) {
                 document.querySelector('#result').innerText = `flutter 回调的结果: ${params.toString()}`;
             });
+            alert(666);
         }
     </script>
 </head>
