debug(js_call_flutter): params

--- a/fe-file/index.html
+++ b/fe-file/index.html
@@ -16,9 +16,9 @@
             callback(['js callback', 'from JS']);
         }
         function call() {
-            jsCallFlutter(`js: ${Math.random() * 10}`, 'from JS', function (params) {
+            jsCallFlutter([`js: ${Math.random() * 10}`, 'from JS', function (params) {
                 document.querySelector('#result').innerText = `flutter 回调的结果: ${params.toString()}`;
-            });
+            }]);
         }
     </script>
 </head>
