debug(js_call_flutter): params

--- a/fe-file/index.html
+++ b/fe-file/index.html
@@ -17,7 +17,7 @@
         }
         function call() {
             OCObj.jsCallFlutter([`js: ${Math.random() * 10}`, 'from JS'], function (params) {
-                document.querySelector('#result').innerText = `flutter 回调的结果: ${params.toString()}`;
+                document.querySelector('#result').innerText = `flutter 回调的结果: ${JSON.stringify(params)}`;
             });
         }
     </script>
