--- a/fe-file/index.html
+++ b/fe-file/index.html
@@ -13,10 +13,10 @@
     <script>
         function flutterCallJs(params, callback) {
             document.querySelector('#show').innerHTML = `Flutter 传来的值: ${params.toString()}`;
-            callback(['js callback', 'from JS']);
+            callback(['js callback', true, 'from JS']);
         }
         function call() {
-            OCObj.jsCallFlutter([`js: ${Math.random() * 10}`, 'from JS'], function (...params) {
+            OCObj.jsCallFlutter([Math.random() * 10, 'from JS'], function (...params) {
                 document.querySelector('#result').innerText = `flutter 回调的结果: ${JSON.stringify(params)}`;
             });
         }
