--- a/fe-file/index.html
+++ b/fe-file/index.html
@@ -11,17 +11,8 @@
         }
     </style>
     <script>
-        function flutterCallJs(params, callback) {
-            document.querySelector('#show').innerHTML = `Flutter 传来的值: ${params.toString()}`;
-            callback(['js callback', true, 'from JS']);
-        }
         function call() {
-            const m = new Map();
-            const o = {p: 'Hello World'};
-            m.set(o, [666])
-            OCObj.jsCallFlutter([Math.random() * 10, 'from JS', m, new Set([{a:2}])], function (...params) {
-                document.querySelector('#result').innerText = `flutter 回调的结果: ${JSON.stringify(params)}`;
-            });
+            Bridge.getWidgetHeight().then(height => document.querySelector('#show').innerHTML=height);
         }
     </script>
 </head>
