--- a/fe-file/index.html
+++ b/fe-file/index.html
@@ -14,10 +14,10 @@
     <script>
         function call() {
             const height = document.documentElement.clientHeight;
-            Bridge.exchangeHeight(`${height}`).then(
+            Bridge.exchangeHeight(height).then(
                 (error, result) => {
                     if (error) {
-                        alert(error);
+                        alert(typeof error);
                         return;
                     }
                     document.querySelector('#show').innerHTML = `widget height: ${result}`
