--- a/fe-file/index.html
+++ b/fe-file/index.html
@@ -15,14 +15,8 @@
         function call() {
             const height = document.documentElement.clientHeight;
             Bridge.exchangeHeight(height).then(
-                (error, result) => {
-                    if (error) {
-                        alert(error);
-                        return;
-                    }
-                    document.querySelector('#show').innerHTML = `widget height: ${result}`
-                }
-            );
+                (result) => document.querySelector('#show').innerHTML = `widget height: ${result}`
+            ).catch(e => alert(e.message));
         }
     </script>
 </head>
