--- a/fe-file/index.html
+++ b/fe-file/index.html
@@ -15,7 +15,7 @@
         function call() {
             const height = document.documentElement.clientHeight;
             Bridge.exchangeHeight(height).then(
-                (result) => document.querySelector('#show').innerHTML = `widget height: ${result}`
+                (result) => document.querySelector('#show').innerHTML = `widget height: ${result.toString()}`
             ).catch(e => alert(e.message));
         }
     </script>
