--- a/fe-file/index.html
+++ b/fe-file/index.html
@@ -13,7 +13,10 @@
     <script src="./js/bridge.js"></script>
     <script>
         function call() {
-            const height = document.documentElement.clientHeight;
+            // const height = document.documentElement.clientHeight;
+            const height = {
+                1: 'a'
+            }
             Bridge.exchangeHeight(height).then(
                 (result) => document.querySelector('#show').innerHTML = `widget height: ${result}`
             ).catch(e => alert(e.message));
